<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.AshrutSharma_COMP304Sec004_Lab2_Ex1.BrowseApartment"
    tools:layout_editor_absoluteX="1dp">

    <ImageView
        android:id="@+id/imgApt2"
        android:layout_width="361dp"
        android:layout_height="280dp"
        android:layout_marginTop="544dp"
        android:contentDescription="Apartment 2 Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAptPrice1"
        app:srcCompat="@drawable/apt2" />

    <ImageView
        android:id="@+id/imgApt3"
        android:layout_width="361dp"
        android:layout_height="280dp"
        android:layout_marginTop="1020dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAptPrice1"
        app:srcCompat="@drawable/apt3" />

    <TextView
        android:id="@+id/txtApt2Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="596dp"
        android:fontFamily="@font/raleway"
        android:text="@string/apartmentAddress2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chkApt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="53dp"
        android:fontFamily="@font/raleway"
        android:text="Add to Visit List"
        app:layout_constraintBottom_toTopOf="@+id/txtApt3Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgApt2"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/txtAptPrice3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="544dp"
        android:fontFamily="@font/raleway"
        android:text="@string/apartmentPrice2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApt1Address" />

    <CheckBox
        android:id="@+id/chkApt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/raleway"
        android:text="Add to Visit List"
        app:layout_constraintBottom_toTopOf="@+id/btnProceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgApt3"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtAptPrice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1032dp"
        android:fontFamily="@font/raleway"
        android:text="@string/apartmentPrice3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApt1Address" />

    <TextView
        android:id="@+id/txtApt3Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1084dp"
        android:fontFamily="@font/raleway"
        android:text="@string/apartmentAddress3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtApt1Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/raleway"
        android:text="@string/apartmentAddress1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAptPrice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/raleway"
        android:text="@string/apartmentPrice1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApt1Address" />

    <ImageView
        android:id="@+id/imgApt1"
        android:layout_width="361dp"
        android:layout_height="280dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAptPrice1"
        app:srcCompat="@drawable/apt1" />

    <CheckBox
        android:id="@+id/chkApt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:text="Add to Visit List"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgApt1"
        app:layout_constraintVertical_bias="0.019" />

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="444dp"
        android:layout_height="66dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/raleway"
        android:text="Checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkApt3" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
