<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.AshrutSharma_COMP304Sec004_Lab2_Ex1.BrowseTownHouse"
        tools:layout_editor_absoluteX="1dp">

        <ImageView
            android:id="@+id/imgTown2"
            android:layout_width="361dp"
            android:layout_height="280dp"
            android:layout_marginTop="544dp"
            android:contentDescription="Town House 2 Image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTownPrice1"
            app:srcCompat="@drawable/town2" />

        <ImageView
            android:id="@+id/imgTown3"
            android:layout_width="361dp"
            android:layout_height="280dp"
            android:layout_marginTop="1020dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTownPrice1"
            app:srcCompat="@drawable/town3" />

        <TextView
            android:id="@+id/txtTown2Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="596dp"
            android:fontFamily="@font/raleway"
            android:text="@string/townAddress2"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/chkTown2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="53dp"
            android:fontFamily="@font/raleway"
            android:text="Add to Visit List"
            app:layout_constraintBottom_toTopOf="@+id/txtTown3Address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgTown2"
            app:layout_constraintVertical_bias="0.375" />

        <TextView
            android:id="@+id/txtTownPrice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="544dp"
            android:fontFamily="@font/raleway"
            android:text="@string/townPrice2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.068"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTown1Address" />

        <CheckBox
            android:id="@+id/chkTown3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/raleway"
            android:text="Add to Visit List"
            app:layout_constraintBottom_toTopOf="@+id/btnProceed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgTown3"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtTownPrice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1032dp"
            android:fontFamily="@font/raleway"
            android:text="@string/townPrice3"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.064"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTown1Address" />

        <TextView
            android:id="@+id/txtTown3Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1084dp"
            android:fontFamily="@font/raleway"
            android:text="@string/townAddress3"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTown1Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:fontFamily="@font/raleway"
            android:text="@string/townAddress1"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTownPrice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway"
            android:text="@string/townPrice1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTown1Address" />

        <ImageView
            android:id="@+id/imgTown1"
            android:layout_width="361dp"
            android:layout_height="280dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTownPrice1"
            app:srcCompat="@drawable/town1" />

        <CheckBox
            android:id="@+id/chkTown1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:text="Add to Visit List"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgTown1"
            app:layout_constraintVertical_bias="0.019" />

        <Button
            android:id="@+id/btnProceed"
            android:layout_width="444dp"
            android:layout_height="66dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/raleway"
            android:text="Checkout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chkTown3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>