<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.AshrutSharma_COMP304Sec004_Lab2_Ex1.BrowseSemi"
        tools:layout_editor_absoluteX="1dp">

        <ImageView
            android:id="@+id/imgSemi2"
            android:layout_width="361dp"
            android:layout_height="280dp"
            android:layout_marginTop="544dp"
            android:contentDescription="Semi-Detached property 2 Image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSemiPrice1"
            app:srcCompat="@drawable/apt2" />

        <ImageView
            android:id="@+id/imgSemi3"
            android:layout_width="361dp"
            android:layout_height="280dp"
            android:layout_marginTop="1020dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSemiPrice1"
            app:srcCompat="@drawable/semi3" />

        <TextView
            android:id="@+id/txtSemi2Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="592dp"
            android:fontFamily="@font/raleway"
            android:text="@string/semiAddress2"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/chkSemi2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="53dp"
            android:fontFamily="@font/raleway"
            android:text="Add to Visit List"
            app:layout_constraintBottom_toTopOf="@+id/txtSemi3Address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgSemi2"
            app:layout_constraintVertical_bias="0.375" />

        <TextView
            android:id="@+id/txtSemiPrice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="544dp"
            android:fontFamily="@font/raleway"
            android:text="@string/semiPrice2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.068"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSemi1Address" />

        <CheckBox
            android:id="@+id/chkSemi3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/raleway"
            android:text="Add to Visit List"
            app:layout_constraintBottom_toTopOf="@+id/btnProceed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgSemi3"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtSemiPrice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1032dp"
            android:fontFamily="@font/raleway"
            android:text="@string/semiPrice3"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.064"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSemi1Address" />

        <TextView
            android:id="@+id/txtSemi3Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1080dp"
            android:fontFamily="@font/raleway"
            android:text="@string/semiAddress3"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSemi1Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/raleway"
            android:text="@string/semiAddress1"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSemiPrice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway"
            android:text="@string/semiPrice1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSemi1Address" />

        <ImageView
            android:id="@+id/imgSemi1"
            android:layout_width="361dp"
            android:layout_height="280dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSemiPrice1"
            app:srcCompat="@drawable/semi1" />

        <CheckBox
            android:id="@+id/chkSemi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:text="Add to Visit List"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgSemi1"
            app:layout_constraintVertical_bias="0.019" />

        <Button
            android:id="@+id/btnProceed"
            android:layout_width="444dp"
            android:layout_height="66dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/raleway"
            android:text="Checkout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chkSemi3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>